Perkin-UAT/force-app/main/default/objects/C_META_E2C_Routing__mdt/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <description>This must match any verified Email-To-Case email address</description>
    <inlineHelpText>This must match any verified Email-To-Case email address</inlineHelpText>
    <label>Additional Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>