Perkin-UAT/force-app/main/default/objects/C_META_E2C_Routing__mdt/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>