Perkin-UAT/force-app/main/default/objects/C_META_E2C_Routing__mdt/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <description>This must match any verified Org wide email address</description>
    <inlineHelpText>This must match any verified Org wide email address</inlineHelpText>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>