Perkin-UAT/force-app/main/default/objects/C_META_E2C_Routing__mdt/fields/OwnerQueueLabel__c.field-meta.xml
<CustomField>
    <fullName>OwnerQueueLabel__c</fullName>
    <description>This will be the Owner Queue Display Name assigned to the case in a SBX. (Source ATEAM-1886)</description>
    <inlineHelpText>This will be the Owner Queue Display Name assigned to the case in a SBX. (Source ATEAM-1886)</inlineHelpText>
    <label>OwnerQueueLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>