Perkin-UAT/force-app/main/default/objects/C_META_E2C_Routing__mdt/fields/Reply_To_All_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Reply_To_All_Recipients__c</fullName>
    <defaultValue>true</defaultValue>
    <description>TRUE=  reply to all emails in the incoming email; FALSE = Only reply to sender. (other E2C addresses are always removed as it causes duplicates)</description>
    <inlineHelpText>TRUE=  reply to all emails in the incoming email; FALSE = Only reply to sender. (other E2C addresses are always removed as it causes duplicates)</inlineHelpText>
    <label>Reply To All Recipients</label>
    <type>Checkbox</type>
</CustomField>