Perkin-UAT/force-app/main/default/objects/C_META_E2C_Routing__mdt/fields/Service_Address_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Email__c</fullName>
    <description>This must match any verified Email-To-Case email address</description>
    <inlineHelpText>This must match any verified Email-To-Case email address</inlineHelpText>
    <label>Service Address Email</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>