Perkin-UAT/force-app/main/default/objects/C_META_E2C_Routing__mdt/listViews/C_META_E2C_ROUTING_Senders.listView-meta.xml
<ListView>
    <fullName>C_META_E2C_ROUTING_Senders</fullName>
    <columns>MasterLabel</columns>
    <columns>OwnerQueueLabel__c</columns>
    <columns>Service_Address_Email__c</columns>
    <columns>From_Address__c</columns>
    <columns>Additional_Emails__c</columns>
    <columns>Type__c</columns>
    <columns>Reply_to_Sender__c</columns>
    <columns>Email_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>C.META_E2C_ROUTING: Senders</label>
    <language>en_US</language>
</ListView>